--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -34,13 +34,13 @@ menu{{n}}
 <ul id="menu{{n}}-times" class="dropdownL">
   <li class="list"><a class="m" child="m1" id="menu{{n}}-day" menu="{{n}}">Days</a>
   <div id="menu{{n}}-m1" class="menu{{n}} d">
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="mon">Monday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="tues">Tuesday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="weds">Wednesday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="thurs">Thursday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="fri">Friday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sat">Sunday</a>
-      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sun">Saturday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="mon" day="{{n}}">Monday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="tues" day="{{n}}">Tuesday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="weds" day="{{n}}">Wednesday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="thurs" day="{{n}}">Thursday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="fri" day="{{n}}">Friday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sat" day="{{n}}">Sunday</a>
+      <a class="menu{{n}} d2 d2F 1" parent="m1" val="sun" day="{{n}}">Saturday</a>
     </div>   
   </li>
 
@@ -50,40 +50,40 @@ menu{{n}}
     <a class="menu{{n}} d2 d2F 2" parent="m2" id="menu{{n}}-hour" child="hours" pos="0">Hour</a>
     
       <div class="menu{{n}} s 2 hours"> 
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">1</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">2</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">3</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">4</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">5</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">6</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">7</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">8</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">9</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">10</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">11</a>
-      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2">12</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">1</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">2</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">3</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">4</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">5</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">6</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">7</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">8</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">9</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">10</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">11</a>
+      <a class="menu{{n}} s2 2 hours" parent="hour" root="m2" day="{{n}}" day="{{n}}">12</a>
     </div>
     <a class="menu{{n}} d2 d2F 2" parent="m2" id="menu{{n}}-min" child="minutes" pos="1">Minute</a>
     
     <div class="menu{{n}} s 2 minutes">
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:00</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:05</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:10</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:15</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:20</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:25</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:30</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:35</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:40</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:45</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:50</a>
-      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2">:55</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:00</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:05</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:10</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:15</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:20</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:25</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:30</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:35</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:40</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:45</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:50</a>
+      <a class="menu{{n}} s2 2 minutes" parent="min" root="m2" day="{{n}}">:55</a>
     </div>
 
     <a class="menu{{n}} d2 d2F 2" parent="m2" id="menu{{n}}-type" child="types" pos="2">Type</a>    
     <div class="menu{{n}} s 2 types">
-      <a class="menu{{n}} s2 2 types" parent="type" root="m2">AM</a>
-      <a class="menu{{n}} s2 2 types" parent="type" root="m2">PM</a>
+      <a class="menu{{n}} s2 2 types" parent="type" root="m2" day="{{n}}">AM</a>
+      <a class="menu{{n}} s2 2 types" parent="type" root="m2" day="{{n}}">PM</a>
     </div>
   </li>
 
@@ -93,40 +93,40 @@ menu{{n}}
     <a class="menu{{n}} d2 d2F 3" parent="m3" id="menu{{n}}-hour2" child="hours2" pos="0">Hour</a>
     
       <div class="menu{{n}} s 3 hours2"> 
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">1</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">2</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">3</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">4</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">5</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">6</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">7</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">8</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">9</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">10</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">11</a>
-      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3">12</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">1</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">2</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">3</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">4</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">5</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">6</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">7</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">8</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">9</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">10</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">11</a>
+      <a class="menu{{n}} s2 3 hours2" parent="hour2" root="m3" day="{{n}}">12</a>
     </div>
     <a class="menu{{n}} d2 d2F 3" parent="m3" id="menu{{n}}-min2" child="minutes2" pos="1">Minute</a>
     
     <div class="menu{{n}} s 3 minutes2">
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:00</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:05</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:10</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:15</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:20</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:25</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:30</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:35</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:40</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:45</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:50</a>
-      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3">:55</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:00</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:05</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:10</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:15</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:20</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:25</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:30</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:35</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:40</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:45</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:50</a>
+      <a class="menu{{n}} s2 3 minutes2" parent="min2" root="m3" day="{{n}}">:55</a>
     </div>
 
     <a class="menu{{n}} d2 d2F 3" parent="m3" id="menu{{n}}-type2" child="types2" pos="2">Type</a>    
     <div class="menu{{n}} s 3 types2">
-      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3">AM</a>
-      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3">PM</a>
+      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3" day="{{n}}">AM</a>
+      <a class="menu{{n}} s2 3 types2" parent="type2" root="m3" day="{{n}}">PM</a>
     </div>
   </li>
 
@@ -139,13 +139,13 @@ menu{{n}}
 </ul>
 </div>
 
-<input type="hidden" id="_day1" name="day1" value="">
-<input type="hidden" id="_starthour1" name="start_hour1" value="">
-<input type="hidden" id="_startminute1" name="start_minute1" value="">
-<input type="hidden" id="_starttype1" name="start_type1" value="">
-<input type="hidden" id="_endhour1" name="end_hour1" value="">
-<input type="hidden" id="_endminute1" name="end_minute1" value="">
-<input type="hidden" id="_endtype1" name="end_type1" value="">
+<input type="hidden" id="{{n}}-day1" name="{{n}}-day1" value="">
+<input type="hidden" id="{{n}}-starthour1" name="{{n}}-start_hour1" value="">
+<input type="hidden" id="{{n}}-startminute1" name="{{n}}-start_minute1" value="">
+<input type="hidden" id="{{n}}-starttype1" name="{{n}}-start_type1" value="">
+<input type="hidden" id="{{n}}-endhour1" name="{{n}}-end_hour1" value="">
+<input type="hidden" id="{{n}}-endminute1" name="{{n}}-end_minute1" value="">
+<input type="hidden" id="{{n}}-endtype1" name="{{n}}-end_type1" value="">
 
 
 <br><br><br>
